--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: kevinreedy.net
+email: kevinreedy@gmail.com
+description: >
+  Bits.
+  Beats.
+  Things that start with 'B' for $800.
+baseurl: ""
+url: "http://kevinreedy.net" # the base hostname & protocol for your site
+twitter_username: kevinreedy
+github_username:  kevinreedy
 
 # Build settings
 markdown: kramdown
