--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ description: >
 baseurl: ""
 url: "http://kevinreedy.net" # the base hostname & protocol for your site
 twitter_username: kevinreedy
-github_username:  kevinreedy
+github_username: kevinreedy
+linkedin_username: kevinreedy
 
 # Build settings
 markdown: kramdown
