--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ meta_description: >
   He has a love/hate relationship with the word DevOps.
   In his free time, he enjoys Brewing Beer, Snowboarding, and DJing.
 baseurl: ""
-url: "http://kevinreedy.net" # the base hostname & protocol for your site
+url: "https://kevinreedy.net" # the base hostname & protocol for your site
 twitter_username: kevinreedy
 github_username: kevinreedy
 linkedin_username: kevinreedy
