Add Chef description to Resume

--- a/_data/resume/experience.yml
+++ b/_data/resume/experience.yml
@@ -1,5 +1,8 @@
 - org: Chef
-  role: Customer Success Engineer
+  role: Customer Engineer
+  bullets:
+    - "Guide customers to be successful both technically and culturally with their DevOps Journey and Chef's Products"
+    - "Develop reusable solutions to technical problems and challenges encountered by customers"
   location: Chicago, IL
   when: September 2015 - Present
 - org: Belly
@@ -12,7 +15,6 @@
     - "Migrated all systems into Amazon Virtual Private Cloud with zero downtime"
     - "Used Chef, Nginx, Consul, and Route 53 to create a scalable load balancer topology that is dynamically configured based on where services are running (EC2, Heroku, S3, etc)"
     - "Designed and implemented a user events logging and analysis system utilizing FluentD, RabbitMQ, S3, and Hadoop"
-    - "Identified and removed single points of failure in existing infrastructure"
 
 - org: Tap.Me
   role: Backend Engineer
@@ -22,7 +24,6 @@
     - "Used Chef to automate the deployment of servers, software, and code"
     - "Created a scalable Python and AMQP based notification system using Apple's APNS, Android's C2DM, and SMS"
     - "Moved services to a hybrid of physical machines and cloud servers to get the cost and performance benefits of physical servers with the scaling benefits of the cloud"
-    - "Set up monitoring systems using a combination of nagios, graphite, and collectd"
 
 - org:  OpenDNS
   role: System Administrator
