Update meta description

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >
   Beats.
   Things that start with 'B' for $800.
 meta_description: >
-  Homepage of Kevin Reedy, Infrastructure Architect at Belly and Automation Enthusiast, from Chicago, IL.
+  Homepage of Kevin Reedy, Customer Engineer at Chef and Automation Enthusiast from Chicago, IL.
   He has a love/hate relationship with the word DevOps.
   In his free time, he enjoys Brewing Beer, Snowboarding, and DJing.
 baseurl: ""
