--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ twitter_username: kevinreedy
 github_username: kevinreedy
 linkedin_username: kevinreedy
 
-gems:
+plugins:
   - jekyll-sitemap
 
 # Build settings
