Update resume data

--- a/_data/resume/education.yml
+++ b/_data/resume/education.yml
@@ -3,5 +3,6 @@
   location: Chicago, IL
   when: Fall 2003 - Summer 2007
   bullets:
+    - "Additional Concentration in Network Security"
     - "Outstanding Senior Leader Award"
     - "President of DePaul’s Fundamental Research in Academic Gaming (DeFrag) Organization"
