--- a/_data/resume/organizations.yml
+++ b/_data/resume/organizations.yml
@@ -10,6 +10,6 @@
   role: President
   when: June 2020 - Present
   bullets:
-    - "Founded the organization, including become a 501(c)(3) non-profit organization"
+    - "Founded the organization, including becoming a 501(c)(3) non-profit organization"
     - "Organized the first ever National Shuffleboard Tournament held in Illinois, bringing in 128 people from 9 states"
     - "Helped grow membership to over 150 in our first year"
